Fix docs scrollbar issue, add typechecking back

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -460,7 +460,7 @@ pre {
 }
 
 .code-content {
-  padding: var(--space-md);
+  padding: var(--space-sm);
   overflow-x: auto;
 }
 
